syntax = "proto3";
package protocols;
option go_package = "github.com/movsb/taoblog/proto";

message SearchPostsRequest {
	string search = 1;
}

message SearchPostsResponse {
	message Post {
		int32 id = 1;
		string title = 2;
		string content = 3;
	}
	repeated Post posts = 1;
	bool initialized = 2;
}
